--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       - uses: actions/setup-python@v2
         with:
-          python-version: 'pypy-3.9'
+          python-version: 'python-3.9'
 
       - name: Install
         id: install
