fix github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
         id: download
         run: |
           cd model/cpu
-          gdown https://drive.google.com/uc?id=1M9gJ9NOR7e-sqcLoNxQ8KMFpw25CaW11
+          pipenv run gdown https://drive.google.com/uc?id=1M9gJ9NOR7e-sqcLoNxQ8KMFpw25CaW11
           cd ../..
 
       - name: Lint
