--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,7 @@ gdown = "*"
 opencv-python="*"
 torch = {index = "pytorch",version = "==1.9.0"}
 torchvision = {index = "pytorch",version = "==0.10.0"}
-mmcv-full = {git = "https://github.com/open-mmlab/mmcv.git"}
+mmcv = {git = "https://github.com/open-mmlab/mmcv.git"}
 mmdet = "*"
 mmocr = "*"
 
