revert pipfile to past where it was working

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ name = "pytorch"
 url = "https://download.pytorch.org/whl/cpu/torch_stable.html"
 verify_ssl = false
 
+
 [requires]
 python_version = '3.9'
 
@@ -19,7 +20,7 @@ gdown = "*"
 opencv-python="*"
 torch = {index = "pytorch",version = "==1.9.0"}
 torchvision = {index = "pytorch",version = "==0.10.0"}
-mmcv-full = {git = "https://github.com/open-mmlab/mmcv.git"}
+mmcv-full = "*"
 mmdet = "*"
 mmocr = "*"
 
