--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         id: install
         run: |
           pip install pipenv
-          pipenv install --dev --skip-lock
+          MMCV_WITH_OPS=1 pipenv install --dev --skip-lock
 
       - name: Download Model
         id: download
