--- a/Pipfile
+++ b/Pipfile
@@ -28,7 +28,7 @@ gdown = "*"
 opencv-python="*"
 torch = {index = "pytorch",version = "==1.9.0"}
 torchvision = {index = "pytorch",version = "==0.10.0"}
-mmcv-full = {index= "mmcv"}
+mmcv = {index= "mmcv", version = "==1.3.15"}
 mmdet = "*"
 mmocr = "*"
 
