--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install
         id: install
         run: |
-          pip3 install -r requirements
+          pip3 install -r requirements.txt
 
       - name: Download Model
         id: download
