--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Install
         id: install
         run: |
+          python -m venv ./.venv
+          source .venv/bin/activate
           pip3 install -r requirements.txt
 
       - name: Download Model
@@ -42,6 +44,10 @@ jobs:
       - name: Code Style
         if: success() || steps.install.outcome == 'success'
         run: black ebl_ai --check
+
+      - name: Type Check
+        if: success() || steps.install.outcome == 'success'
+        run: pyre check
 
       - name: Unit Tests
         id: unit_tests
