--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,3 +60,27 @@ jobs:
         run: |
           source .venv/bin/activate
           pytest
+
+  docker:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/to_be_reviewed'
+    needs: [ test ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: docker/setup-buildx-action@v1
+
+      - uses: docker/login-action@v1
+        with:
+          registry: www.ebl.lmu.de
+          username: ${{ secrets.EBL_REGISTRY_USERNAME }}
+          password: ${{ secrets.EBL_REGISTRY_PASSWORD }}
+
+      - id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: |
+            www.ebl.lmu.de/ebl-ai-api:main
+            ${{format('www.ebl.lmu.de/ebl-ai-api:main.{0}', github.run_number)}}
+
