--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
           pytest
 
   docker:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/to_be_reviewed'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     needs: [ test ]
     runs-on: ubuntu-latest
     steps:
