--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           lfs: 'true'
+      - run: git lfs pull
 
       - uses: actions/setup-python@v2.2.2
         with:
