--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           lfs: 'true'
-      - run: git lfs pull
+
 
       - uses: actions/setup-python@v2.2.2
         with:
@@ -64,6 +64,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           lfs: 'true'
+      - run: git lfs pull
 
       - uses: docker/setup-buildx-action@v1
 
@@ -76,6 +77,7 @@ jobs:
       - id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
           tags: |
             www.ebl.lmu.de/ebl-ai-api:main
