--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          lfs: 'true'
+          lfs: 'false'
 
 
       - uses: actions/setup-python@v2.2.2
