--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ torch==1.9.0+cpu
 torchvision==0.10.0
 falcon
 attrs
-waitress 
+waitress
+gdown
 opencv-python
 --find-links https://download.openmmlab.com/mmcv/dist/cpu/torch1.9.0/index.html
 mmcv-full 
