find linkks mmcv not working on server

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ opencv-python
 mmengine
 mmdet==3.0.0rc6
 mmocr
+--find-links --index-url https://download.openmmlab.com/mmcv/dist/cpu/torch2.0/index.html
 mmcv==2.0.1
 flake8 
 pytest
