--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
---find-links --index-url https://download.pytorch.org/whl/cpu
+--find-links https://download.pytorch.org/whl/cpu
 torch==2.0.1
 torchvision==0.15.2
 falcon
@@ -6,12 +6,7 @@ attrs
 waitress
 gdown
 opencv-python
-#mmengine
-#mmdet==3.0.0rc6
-#mmocr
-#--find-links --index-url https://download.openmmlab.com/mmcv/dist/cpu/torch2.0/index.html
-#mmcv==2.0.1
-flake8 
+flake8
 pytest
 pytest-cov 
 black
